<resources>
    <string name="app_name">ThereMidi</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="pitchname">Pitch</string>
    <string name="expression">Expression</string>
    <string name="zero">0</string>
    <string name="bend">Bend</string>
    <string name="disconnected">Not connected</string>
    <string name="connectedTo">Connected to </string>
    <string name="midi_port">midi port</string>
    <string name="midi_destinations_available">MIDI destinations available:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
