<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.skunkworks.theremidi.MidiSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_ok_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/midiSettingsOkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/midiPortLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/destinationsSpinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/midiPortSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="start" />

            <TextView
                android:id="@+id/midiPortTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/midi_port" />
        </LinearLayout>

        <Spinner
            android:id="@+id/destinationsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/midiSettingsTextField"
            android:padding="12dp"
            android:paddingBottom="48dp" />

        <TextView
            android:id="@+id/midiSettingsTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/midi_destinations_available" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
