<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="no.skunkworks.theremidi.ThereminActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/expressionPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="top|fill_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bendLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="24dp">

                <TextView
                    android:id="@+id/bendCurrentValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/zero" />

                <SeekBar
                    android:id="@+id/bendSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/bendNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeMinTextSize="12dp"
                    android:gravity="start"
                    android:text="@string/bend" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pitchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="24dp">

                <TextView
                    android:id="@+id/currentPitchValueView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/zero" />

                <SeekBar
                    android:id="@+id/pitchSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pitchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/pitchname"
                    tools:text="Pitch" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expressionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="24dp">

                <TextView
                    android:id="@+id/currentExpressionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="@string/zero" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/expressionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/expression"
                    tools:text="@string/expression" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/playLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal|center"
                app:srcCompat="@android:drawable/presence_online" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
